# dockless

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  foxd.db
.github/workflows/: docs.yml  release.yml
docs/: package.json  pnpm-lock.yaml  svelte.config.js
docs/src/: app.html
docs/src/content/: docs.md
docs/src/content/docs/: configuration.md  get-started.md  runtime-model.md  supported-runtimes.md  web-dashboard.md
docs/src/lib/: svgs.ts
docs/src/routes/: +layout.svelte  +page.svelte  layout.css
docs/src/routes/[...slug]/: +error.svelte  +page.svelte
docs/static/: install.sh  upgrade.sh
portal/: package.json  pnpm-lock.yaml  vite.config.ts
portal/src/: app.html
portal/src/lib/: api.ts  services.svelte.ts  toasts.svelte.ts  types.ts  utils.ts
portal/src/lib/components/: CreateServiceModal.svelte  NodeStats.svelte  ServiceCard.svelte  Toast.svelte  ToastContainer.svelte  TopBar.svelte
portal/src/lib/components/service-details/: ConfigTab.svelte  DetailsTab.svelte  EnvironmentTab.svelte  LogsTab.svelte  ServiceHeader.svelte  (+3 more)
portal/src/routes/: +layout.svelte  +page.svelte  layout.css
scripts/: bump-version.sh  docker-build.sh
src/: api.rs  config.rs  identity.rs  main.rs  node.rs  registry.rs  service.rs  supervisor.rs  supervisor_manager.rs
src/api/: server.rs
src/api/routes/: health.rs  mod.rs  registry.rs  services.rs
src/config/: mod.rs
src/platform/: mod.rs  node.rs  port_manager.rs
src/registry/: mod.rs
src/runtime/: log_buffer.rs  mod.rs  service.rs  supervisor.rs  supervisor_manager.rs
(+2 files in other folders)
