[package]
name = "dockless"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3"
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
libc = "0.2"
mime_guess = "2.0.5"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = { version = "0.38.2", features = ["multithread"] }
tokio = {version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "1.0.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.21.0", features = ["v4", "serde"]}


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
